--- a/src/main/resources/templates/list-concert.html
+++ b/src/main/resources/templates/list-concert.html
@@ -7,9 +7,33 @@
 </head>
 <body>
     <h1>Concert List</h1>
-    <a href="/add-concert/">Add Concert</a>
+    <a href="/add-concert">Add Concert</a>
     <!-- TODO: show delete link for each concert -->
+    <a href="/delete-concert">Delete All</a>
+    
+    <br><br>
 
     <!-- TODO: Add list of concerts -->
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="concert : ${concerts}">
+                <td th:text="${concert.id}"></td>
+                <td th:text="${concert.title}"></td>
+                <td th:text="${concert.description}"></td>
+                <td>
+                    <a th:href="@{'/delete-concert/' + ${concert.id}}">Delete</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
 </body>
 </html>
